--- a/module5&6/package.json
+++ b/module5&6/package.json
@@ -12,6 +12,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "luxon": "^3.2.1",
+    "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "uuid": "^9.0.0"
   }
