--- a/exercise8/ShabaniBasharExercise8/package.json
+++ b/exercise8/ShabaniBasharExercise8/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^5.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
